# docs/swagger.yaml
@@ -230,7 +230,11 @@ definitions:
         items:
           $ref: '#/definitions/reports.Analysis'
         type: array
+      average_sentiment:
+        type: number
       entity_name:
+        type: string
+      sentiment_label:
         type: string
       total_articles:
         type: integer
