# sentiment-communication/models.go
@@ -52,24 +52,23 @@ type Results struct {
 }
 
 type ArticleData struct {
-	ArticleID             int               `json:"article_id"`
-	ArticleSummary        string            `json:"article_summary"`
-	Entities              map[string]Entity `json:"entities"`
-	EntitySentimentScores []interface{}     `json:"entity_sentiment_scores"`
-	PublishedDate         string            `json:"published_date"`
-	ScrapedAt             string            `json:"scraped_at"`
-	Title                 string            `json:"title"`
-	TopicSentimentScores  []interface{}     `json:"topic_sentiment_scores"`
-	Topics                map[string]Topic  `json:"topics"`
-	URL                   string            `json:"url"`
-	URLID                 int               `json:"url_id"`
+	ArticleID            int               `json:"article_id"`
+	ArticleSummary       string            `json:"article_summary"`
+	Entities             map[string]Entity `json:"entities"`
+	PublishedDate        string            `json:"published_date"`
+	ScrapedAt            string            `json:"scraped_at"`
+	Title                string            `json:"title"`
+	TopicSentimentScores []interface{}     `json:"topic_sentiment_scores"`
+	Topics               map[string]Topic  `json:"topics"`
+	URL                  string            `json:"url"`
+	URLID                int               `json:"url_id"`
 }
 
 type Entity struct {
-	Name            string    `json:"name"`
-	RelatedTopics   []string  `json:"related_topics"`
-	SentimentLabel  string    `json:"sentiment_label"`
-	SentimentScores []float64 `json:"sentiment_scores"`
+	Name           string   `json:"name"`
+	RelatedTopics  []string `json:"related_topics"`
+	SentimentLabel string   `json:"sentiment_label"`
+	SentimentScore float32  `json:"sentiment_score"`
 }
 
 type URL struct {
@@ -81,5 +80,5 @@ type Topic struct {
 	Name            string   `json:"name"`
 	RelatedEntities []string `json:"related_entities"`
 	SentimentLabel  string   `json:"sentiment_label"`
-	SentimentScore  float64  `json:"sentiment_score"`
+	SentimentScore  float32  `json:"sentiment_score"`
 }
